[package]
name = "photon-bot"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/jay3332/PhotonBotRs"

[dependencies]
dotenv = "0.15.0"
image = "0.23"
lazy_static = "1.4.0"
regex = "1.5.4"
reqwest = "0.11"

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "current"
default-features = false
features = [
    "builder",
    "cache",
    "collector",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend",
    "unstable_discord_api",
]

[patch.crates-io.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "current"

[dependencies.tokio]
version = "1.14"
features = ["full"]
